[package]
name = "gongd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A local Git-aware filesystem event daemon with Unix socket broadcasting"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
